--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "inquirer": "^6.3.1",
+    "inquirer-recursive": "0.0.6",
+    "lodash": "^4.17.19"
   },
   "devDependencies": {
     "jest": "^24.8.0"
